// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tree /> snapshot should match snapshot 1`] = `
<Tree
  aria-label="some tree"
  treeStructure={
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        Object {
          "children": Array [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    aria-label="some tree"
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  />
</Tree>
`;

exports[`<Tree /> snapshot should match snapshot with className 1`] = `
<Tree
  aria-label="some tree"
  className="example-class"
  treeStructure={
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        Object {
          "children": Array [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    aria-label="some tree"
    className="example-class md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  />
</Tree>
`;

exports[`<Tree /> snapshot should match snapshot with id 1`] = `
<Tree
  aria-label="some tree"
  id="example-id"
  treeStructure={
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        Object {
          "children": Array [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    aria-label="some tree"
    className="md-tree-wrapper"
    id="example-id"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  />
</Tree>
`;

exports[`<Tree /> snapshot should match snapshot with style 1`] = `
<Tree
  aria-label="some tree"
  style={
    Object {
      "color": "pink",
    }
  }
  treeStructure={
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        Object {
          "children": Array [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    aria-label="some tree"
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
    style={
      Object {
        "color": "pink",
      }
    }
  />
</Tree>
`;

exports[`<Tree /> snapshot should match snapshot with style 2`] = `
<Tree
  aria-label="some tree"
  style={
    Object {
      "color": "pink",
    }
  }
  treeStructure={
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        Object {
          "children": Array [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    aria-label="some tree"
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
    style={
      Object {
        "color": "pink",
      }
    }
  />
</Tree>
`;

exports[`<Tree /> snapshot should match snapshot with style 3`] = `
<Tree
  aria-label="some tree"
  style={
    Object {
      "color": "pink",
    }
  }
  treeStructure={
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        Object {
          "children": Array [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    aria-label="some tree"
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
    style={
      Object {
        "color": "pink",
      }
    }
  />
</Tree>
`;
